<resources>
    <string name="app_name">朋友圈</string>
    <string name="user_name">新用户</string>
    <string name="entry_time">发布时间 %1$s</string>
    <string name="visitor_title">%1$s的动态</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_release">发布</string>
    <string name="btn_complete">完成</string>
    <string name="dec_tips">今日感悟～</string>
    <string name="btn_delete">删除</string>
    <string name="btn_like">点赞</string>
    <string name="btn_comment">回复</string>
    <string name="comment_title">回复评论</string>
    <string name="comment_dec_tips">请输入评论...</string>
    <string name="modify_btn_name">更换名字</string>
    <string name="modify_btn_head">更换头像</string>
    <string name="modify_name_title">修改名称</string>
    <string name="modify_name_dec_tips">输入新名称</string>
    <string name="modify_head_title">个人头像</string>
    <string name="modify_head_btn">设置头像</string>
    <string name="modify_cover_title">更换封面</string>
    <string name="modify_cover_btn_1">本地图库</string>
    <string name="tip_title_1">请求为空</string>
    <string name="tip_title_2">请求成功</string>
    <string name="tip_title_3">请求失败</string>
    <string name="tip_title_4">请求异常</string>
    <string name="tip_title_5">网络异常或服务器未启动，请重试</string>
    <string name="tip_title_6">网络请求中请等待</string>


</resources>