<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:id="@+id/set_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_name_title"
        android:textSize="16sp"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/set_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_name_tv"
        android:hint="@string/modify_name_dec_tips"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/set_name_et"
        android:padding="10dp">
        <Button
            android:id="@+id/set_name_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:background="@drawable/btn_style"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp">
        </Button>
        <Button
            android:id="@+id/set_name_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_complete"
            android:background="@drawable/btn_green_style"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="5dp">
        </Button>
    </LinearLayout>

</RelativeLayout>