<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ContentEditingActivity">
    <RelativeLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/ce_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp">
        </TextView>
        <TextView
            android:id="@+id/ce_btn_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_release"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_green_style"
            android:paddingVertical="8dp"
            android:paddingHorizontal="15dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp">
        </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ce_rl_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:layout_below="@id/main_toolbar">
        <EditText
            android:id="@+id/ce_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dec_tips"
            android:textColorHint="@color/grey_7D7D7D"
            android:textColor="@color/grey_7D7D7D"
            android:background="@null"
            android:paddingHorizontal="30dp">
            <requestFocus/>
        </EditText>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/ce_describe"
            android:paddingHorizontal="45dp">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>
    <ImageView
        android:visibility="gone"
        android:id="@+id/deleteArea"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/delete"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:scaleType="center"
        android:padding="10dp">
    </ImageView>

</RelativeLayout>